<resources>
    <string name="app_name">Karak</string>

    <string name="scan">Scan</string>
    <string name="pairing_request">Pairing request</string>
    <string name="preference_file_key">MachineList</string>
    <string name="permission">PERMISSION</string>
    <string name="please_grant_us_following_permissions">PLEASE GRANT US FOLLOWING PERMISSIONS</string>
    <string name="camera">CAMERA</string>
    <string name="scan_qr_codes_found_in_ibrew_machines">Scan QR Codes found in IBrew Machines.</string>
    <string name="location">LOCATION</string>
    <string name="location_permission_description">This app does not use location information, but scanning for karak Machines requires this permission. \n The scan result can contain location information, so Google decided that starting with android 6.0 apps have to request permission.</string>
    <string name="connecting_to_ibrew_machines_that_uses_bluetooth">Connecting to karak Machines that uses Bluetooth.</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="connecting_to_ibrew_machines_that_uses_wifi">Connecting to Karak Machines that uses Wifi.</string>
    <string name="wifi">WIFI</string>
    <string name="allow_access">Allow access</string>
    <string name="acra_toast_text">Sorry the application crashed</string>
    <string name="machine_not_ready_n_contact_machine_operator">Machine not ready \n Contact machine operator</string>
    <string name="favourites">Favourites</string>
    <string name="unkown">unknown</string>
    <string name="errorOccurred">error occurred</string>
    <string name="Timeout">Timeout</string>
    <string name="UpdateSuccessfully">Updated successfully</string>
    <string name="FlushUpdateSuccessfully">Flush Completed</string>
    <string name="MachineNumberAddedSuccessfully">Machine Number Added Successfully</string>
    <string name="DispenseCanceled">"Dispense Canceled !</string>
    <string name="TimedOut">Timed Out!</string>
    <string name="DispensingPleaseWait">Dispensing Please Wait!</string>
    <string name="PanReleaseAck">Pan Release Ack</string>
    <string name="go">Go</string>
    <string name="are_you_sure_to_continue">Are You Sure To Continue?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_discconect">Confirm Disconnect</string>
    <string name="are_you_sure_you_want_to_disconnect">Are you sure you want to disconnect ?</string>
    <string name="maintenance_access">Maintenance Access</string>
    <string name="release">Release</string>
    <string name="save">SAVE</string>
    <string name="admin">Admin</string>
    <string name="cup_count">Cup Count</string>
    <string name="reset">Reset</string>
    <string name="maintenance">Maintenance</string>
    <string name="statistics">Statistics</string>
    <string name="karak">Karak</string>
    <string name="cardmom_karak">Cardamom Karak</string>
    <string name="masala_karak">Masala Karak</string>
    <string name="milk">Milk</string>
    <string name="ginger_karak">Ginger Karak</string>
    <string name="water">Water</string>
    <string name="sugar">Sugar</string>
    <string name="coffee">Coffee</string>
    <string name="_1000ml">1000ml</string>
    <string name="_500ml">500ml</string>
    <string name="_900ml">900ml</string>
    <string name="_400ml">400ml</string>
    <string name="_800ml">800ml</string>
    <string name="_300ml">300ml</string>
    <string name="_700ml">700ml</string>
    <string name="_200ml">200ml</string>
    <string name="_600ml">600ml</string>
    <string name="_100ml">100ml</string>
    <string name="_1cup">1 Cup</string>
    <string name="_2cup">2 Cup</string>
    <string name="_3cup">3 Cup</string>
    <string name="_4cup">4 Cup</string>
    <string name="_5cup">5 Cup</string>
    <string name="_6cup">6 Cup</string>
    <string name="_7cup">7 Cup</string>
    <string name="_8cup">8 Cup</string>
    <string name="_9cup">9 Cup</string>
    <string name="_10cup">10 Cup</string>
    <string name="fimware_version">Fimware Version</string>
    <string name="mobile_app_version">Mobile App Version</string>
    <string name="induction_heater">Induction Heater</string>
    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="touch_to_search_for_ibrew_karak_maker">Touch to search for iBrew Karak Maker</string>
    <string name="no_ml_percup">serving per cup</string>

</resources>