<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view4"
            android:layout_width="320dp"
            android:layout_height="230dp"
            android:background="@drawable/bg_borderbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_maintance_access"
            style="@style/titleTextAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_discconect"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/titleTextAppearence"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_disconnect"
            android:textSize="17dp"
            app:layout_constraintBottom_toTopOf="@+id/dialogPass_submit"
            app:layout_constraintEnd_toEndOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/txt_maintance_access" />


        <View
            android:id="@+id/dialogPass_submit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edt_back_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dialogPas" />

        <TextView
            android:id="@+id/dialogPasst_dismiss"
            style="@style/textAppearence"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/dialogPass_submit"
            app:layout_constraintEnd_toEndOf="@+id/dialogPass_submit"
            app:layout_constraintStart_toStartOf="@+id/dialogPass_submit"
            app:layout_constraintTop_toTopOf="@+id/dialogPass_submit" />

        <View
            android:id="@+id/dialogPas"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/edt_back_new"
            app:layout_constraintEnd_toStartOf="@+id/dialogPass_submit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/dialogPass_dismiss"
            style="@style/textAppearence"
            android:layout_width="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/go"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/dialogPass_submit"
            app:layout_constraintEnd_toEndOf="@+id/dialogPas"
            app:layout_constraintStart_toStartOf="@+id/dialogPas"
            app:layout_constraintTop_toTopOf="@+id/dialogPass_submit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>