<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view15"
            android:layout_width="320dp"
            android:layout_height="230dp"
            android:background="@drawable/bg_borderbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_maintance_access"
            style="@style/titleTextAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/are_you_sure_to_continue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dialogPass_ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edt_back_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toTopOf="@+id/dialogPass_ok"
            app:layout_constraintEnd_toEndOf="@+id/view15"
            app:layout_constraintStart_toStartOf="@+id/view15"
            app:layout_constraintTop_toBottomOf="@+id/txt_maintance_access"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_coffe">

        </com.airbnb.lottie.LottieAnimationView>

        <TextView
            android:id="@+id/txt_ok"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/dialogPass_ok"
            app:layout_constraintEnd_toEndOf="@+id/dialogPass_ok"
            app:layout_constraintStart_toStartOf="@+id/dialogPass_ok"
            app:layout_constraintTop_toTopOf="@+id/dialogPass_ok" />


        <View
            android:id="@+id/dialogPass_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edt_back_new"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialogPass_ok" />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/dialogPass_cancel"
            app:layout_constraintEnd_toEndOf="@+id/dialogPass_cancel"
            app:layout_constraintStart_toStartOf="@+id/dialogPass_cancel"
            app:layout_constraintTop_toTopOf="@+id/dialogPass_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>