<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.39" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/txt_password"
            style="@style/titleTextAppearence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/txt_admin" />

        <TextView
            android:id="@+id/txt_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/editText_admin_password"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <EditText
            android:id="@+id/editText_admin_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edt_back_new"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:maxLength="4"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txt_cup_count_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cup_count"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/editText_cup_count_reset"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/txt_cup_count_reset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_cup_count_reset"
            app:layout_constraintStart_toStartOf="@+id/txt_cup_count_reset"
            app:layout_constraintTop_toBottomOf="@+id/txt_cup_count_reset" />

        <EditText
            android:id="@+id/editText_cup_count_reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edt_back_new"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:maxLength="4"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/editText_admin_password"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/txt_maintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintenance"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <EditText
            android:id="@+id/editText_maintenance_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/edt_back_new"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:maxLength="4"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/editText_cup_count_reset"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <View
            android:id="@+id/view_save_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:background="@drawable/edt_back_new"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/set_password_save"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Save"
            android:textColor="@color/textColor"
            android:textSize="15dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@id/view_save_password"
            app:layout_constraintEnd_toEndOf="@id/view_save_password"
            app:layout_constraintTop_toTopOf="@id/view_save_password"
            app:layout_constraintBottom_toBottomOf="@id/view_save_password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>